2005-11-29  John McCutchan  <ttb@tentacle.dhs.org>

	* modules/inotify-helper.c: (mask_to_event_type),
	(mask_to_event_type_dir_as_file), (mask_to_event_type_file_as_dir),
	(gam_inotify_emit_one_event), (gam_inotify_emit_events),
	(gam_inotify_process_event), (inotify_helper_add),
	(inotify_helper_remove), (inotify_helper_init),
	(gam_inotify_nolonger_missing), (gam_inotify_nolonger_link),
	(gam_inotify_poll_link), (gam_inotify_sanity_check): inotify-helper now
	uses inotify-kernel. 
	* modules/inotify-kernel.c: (ik_startup), (ik_event_new_dummy),
	(ik_event_free), (ik_ignore), (ik_read_callback),
	(ik_process_events), (ik_process_eq_callback):
	* modules/inotify-kernel.h: Slight changes for inotify-helper.

2005-11-29  Christian Kellner  <gicmo@gnome.org>

	* doc/tmpl/gnome-vfs-file-info.sgml:
	* libgnomevfs/gnome-vfs-file-info.h:
	Add GNOME_VFS_FILE_INFO_FIELDS_IDS to indicate
	UID/GID fields are valid.
	
	* libgnomevfs/gnome-vfs-module-shared.c:
	(gnome_vfs_stat_to_file_info):
	* modules/http-neon-method.c:
	* modules/nfs-method.c: (nfs_attr_to_file_info):
	* modules/sftp-method.c: (buffer_read_file_info):
	* modules/tar-method.c: (do_get_file_info):
	Set GNOME_VFS_FILE_INFO_FIELDS_IDS if uid/gid are
	valid.
	
	* programs/gnomevfs-info.c: (show_file_info):
	Honor GNOME_VFS_FILE_INFO_FIELDS_IDS.

	Fixes #40644.

2005-11-28  John McCutchan  <ttb@tentacle.dhs.org>

	* modules/Makefile.am: Compile inotify-kernel.c, ship inotify-kernel.h.
	* modules/inotify-kernel.c: (ik_startup), (ik_event_internal_new),
	(ik_event_new), (ik_event_free), (ik_watch), (ik_ignore),
	(ik_read_events), (ik_read_callback), (g_timeval_lt),
	(g_timeval_eq), (ik_pair_events), (ik_event_add_microseconds),
	(ik_event_ready), (ik_pair_moves), (ik_process_events),
	(ik_process_eq_callback):
	* modules/inotify-kernel.h: Factored out inotify code that deals with the
	kernel and raw events.

2005-11-27  Christian Kellner  <gicmo@gnome.org>

	* imported/neon/Makefile.am: Define NE_HAVE_DAV.
